@@ -12,6 +12,7 @@ dependencies {
 
     implementation("org.hibernate.orm:hibernate-core:7.4.7.Final")
     implementation("com.h2database:h2:2.4.240")
+    implementation("org.jline:jline:3.26.3")
 }
 
 java {
@@ -22,6 +23,7 @@ java {
 
 application {
     mainClass = "jackd3v.App"
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 tasks.named<Test>("test") {
